--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
 .App {
   text-align: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 3em;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.form-field {
+  height: 20px;
+  padding: 5px;
+  font-size: 1.5em;
+  border: 3px solid black;
+  padding: 10px;
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-button {
+  border: 3px solid black;
+  font-size: 1.5em;
+  font-weight: 700;
+  padding: 7px;
+  margin: 10px;
 }
+
+.completed {
+  text-decoration: line-through;
+}
+
+.todo-container{
+  background-color: coral;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
+.todo-list{
+  display: grid;
+  justify-content: center;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
+}
+
+.todo-items{
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  margin: 20px;
+  background: white;
+  font-size: 2rem;
+}
+
+.todo-item{
+  align-self: center;
+  padding: 10px;
+}
+
+.todo-buttons{
+  padding: 10px 20px;
+  font-size: 1.5rem;
+}
+
+
